fix: fix form-select selector overlap\ add css to buttons SelectLocationContainer

--- a/el-proyecte-grande-frontend/src/components/register-page/Login.css
+++ b/el-proyecte-grande-frontend/src/components/register-page/Login.css
@@ -44,7 +44,6 @@
   border-radius: 10px;
   margin-top: 10px;
   height: 50px;
-  /* position: relative; */
   width: 100%;
   margin-bottom: 10px;
 }
@@ -75,7 +74,6 @@
   border-radius: 10px;
   margin-top: 10px;
   height: 50px;
-  position: relative;
   width: 100%;
   margin-bottom: 10px;
 }
